--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <div class="calc_wrapper-content">
                     <button>C</button>
                     <button class="btn">x</button>
-                    <button class="btn">÷</button>
+                    <button class="btn">/</button>
                     <button>1</button>
                     <button>2</button>
                     <button>3</button>
-                    <button class="btn">×</button>
+                    <button class="btn">*</button>
                     <button>4</button>
                     <button>5</button>
                     <button>6</button>
